// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`items should return the initial state 1`] = `
Object {
  "count": 0,
  "error": null,
  "items": Array [],
  "limit": 5,
  "loading": false,
  "page": 1,
}
`;

exports[`items should return the item initial state 1`] = `
Object {
  "error": null,
  "item": null,
  "loading": false,
}
`;

exports[`items should return the receive item error state 1`] = `
Object {
  "error": "unexpected error happend when receive item",
  "item": null,
  "loading": false,
}
`;

exports[`items should return the receive item request state 1`] = `
Object {
  "error": null,
  "item": null,
  "loading": true,
}
`;

exports[`items should return the receive item success state 1`] = `
Object {
  "error": null,
  "item": Object {
    "columns": Array [],
    "rows": Array [
      Object {
        "dimension": "100%",
        "tabs": Array [],
        "widgets": Array [
          Object {
            "reference": "5c0f0c9ed8c7f4453f5bb51f",
            "tabIndex": 0,
            "title": "Multiple choice",
            "type": "multipleChoice",
            "widgetType": "question",
          },
        ],
      },
    ],
  },
  "loading": false,
}
`;

exports[`items should return the receive items error state 1`] = `
Object {
  "count": 0,
  "error": "unexpected issues happened when receive items",
  "items": Array [],
  "limit": 5,
  "loading": false,
  "page": 1,
}
`;

exports[`items should return the receive items request state 1`] = `
Object {
  "count": 0,
  "error": null,
  "items": Array [],
  "limit": 5,
  "loading": true,
  "page": 1,
}
`;

exports[`items should return the receive items success state 1`] = `
Object {
  "count": 50,
  "error": null,
  "items": Array [
    Object {
      "columns": Array [],
      "rows": Array [
        Object {
          "dimension": "100%",
          "tabs": Array [],
          "widgets": Array [
            Object {
              "reference": "5c0f0c9ed8c7f4453f5bb51f",
              "tabIndex": 0,
              "title": "Multiple choice",
              "type": "multipleChoice",
              "widgetType": "question",
            },
          ],
        },
      ],
    },
    Object {
      "columns": Array [],
      "rows": Array [
        Object {
          "dimension": "100%",
          "tabs": Array [],
          "widgets": Array [
            Object {
              "reference": "5c0f0c9ed8c7f4453f5ba234",
              "tabIndex": 2,
              "title": "GRAPHING TEST",
              "type": "graphing",
              "widgetType": "question",
            },
          ],
        },
      ],
    },
  ],
  "limit": 10,
  "loading": false,
  "page": 5,
}
`;
